--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fast[api]
-python-dotenv
-openai
-youtube_transcript_api
+fastapi==0.95.1
+python-dotenv==1.0.1
+openai==1.54.4
+youtube_transcript_api==0.6.2
